--- a/2024_spring/Lectures/ML12.ipynb
+++ b/2024_spring/Lectures/ML12.ipynb
@@ -79,7 +79,7 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x717f3c9d14b0>"
+              "<matplotlib.legend.Legend at 0x73f67b5cd360>"
             ]
           },
           "execution_count": 4,
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "id": "4oHdctH-_dw_"
       },
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {
         "id": "lC55hiYA_s33"
       },
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -212,10 +212,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x717f32c48250>"
+              "<matplotlib.collections.PathCollection at 0x73f6782d81c0>"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "oSyCviMylQba"
       },
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -269,10 +269,10 @@
         {
           "data": {
             "text/plain": [
-              "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x717f3335b820>"
+              "<mpl_toolkits.mplot3d.art3d.Poly3DCollection at 0x73f679417580>"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 12,
       "metadata": {
         "id": "GPlz_p_7b5ys"
       },
@@ -316,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 13,
       "metadata": {
         "id": "xdO0Z5ged0ms"
       },
@@ -347,7 +347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 14,
       "metadata": {
         "id": "xpwgmlKsd7Qb"
       },
@@ -358,7 +358,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 15,
       "metadata": {
         "id": "HC1Xn5_aeW-_"
       },
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,7 +384,7 @@
               "0.84"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 17,
       "metadata": {
         "id": "X1YTuRv2ggMg"
       },
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 18,
       "metadata": {
         "id": "GQG63gHygX9f"
       },
@@ -432,7 +432,7 @@
               "0.8566666666666667"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
