--- a/2024_spring/Homeworks/HW6.ipynb
+++ b/2024_spring/Homeworks/HW6.ipynb
@@ -16,11 +16,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "vb53IqZeOX5K"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipykernel_33903/3459056358.py:2: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -68,7 +83,7 @@
         "    Returns:\n",
         "        H - (n, C) NumPy array, where each row H[i,:] = Softmax(X[i,:])\n",
         "    \"\"\"\n",
-        "    #YOUR CODE HERE\n",
+        "    \n",
         "    pass"
       ]
     },
@@ -1443,7 +1458,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.10"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
